making dist.ini usable (jq++)

--- a/dist.ini
+++ b/dist.ini
@@ -8,6 +8,27 @@ copyright_year   = 2010
 homepage   = http://search.cpan.org/dist/Games-Zumbis
 repository = http://github.com/ruoso/Zumbis
 
+[VersionFromModule]
+
+; -- fetch & generate files
+[GatherDir]
+[CompileTests]
+[CriticTests]
+[HasVersionTests]
+[KwaliteeTests]
+[MetaTests]
+[MinimumVersionTests]
+[PodCoverageTests]
+[PodSyntaxTests]
+[PortabilityTests]
+[ReportVersions]
+[UnusedVarsTests]
+
+; -- remove some files
+[PruneCruft]
+[ManifestSkip]
+
+; -- get prereqs
 [Prereq]
 SDL            = 2.503
 XML::Compile   = 1.16
@@ -17,16 +38,12 @@ FindBin        = 1.0
 Carp           = 1.0
 Path::Class    = 0.19
 
+; -- dynamic meta-information
 [ExecDir]
-
 [ShareDir]
 
-[VersionFromModule]
-
 [TestRelease]
-
 [ConfirmRelease]
-
 [UploadToCPAN]
 
 [@Git]
