updating dist.ini with saner content

--- a/dist.ini
+++ b/dist.ini
@@ -1,4 +1,5 @@
 name    = Games-Zumbis
+version = 0.01
 author  = Breno G. de Oliveira <garu@cpan.org>, Daniel Ruoso <ruoso@cpan.org>
 license = Perl_5
 copyright_holder = Breno G. de Oliveira, Daniel Ruoso
@@ -8,7 +9,8 @@ copyright_year   = 2010
 homepage   = http://search.cpan.org/dist/Games-Zumbis
 repository = http://github.com/ruoso/Zumbis
 
-[VersionFromModule]
+[PkgVersion]
+[NextRelease]
 
 ; -- fetch & generate files
 [GatherDir]
@@ -21,12 +23,10 @@ repository = http://github.com/ruoso/Zumbis
 [PodCoverageTests]
 [PodSyntaxTests]
 [PortabilityTests]
-[ReportVersions]
 [UnusedVarsTests]
 
 ; -- remove some files
 [PruneCruft]
-[ManifestSkip]
 
 ; -- get prereqs
 [Prereq]
@@ -39,8 +39,12 @@ Carp           = 1.0
 Path::Class    = 0.19
 
 ; -- dynamic meta-information
+[ManifestSkip]
+[MetaYAML]
 [ExecDir]
 [ShareDir]
+[MakeMaker]
+[Manifest]
 
 [TestRelease]
 [ConfirmRelease]
