removing git dzil plugin until I can figure it out

--- a/dist.ini
+++ b/dist.ini
@@ -44,10 +44,9 @@ Path::Class    = 0.19
 [ExecDir]
 [ShareDir]
 [MakeMaker]
-[Manifest]
+[Manifest] ; should come last
 
 [TestRelease]
 [ConfirmRelease]
 [UploadToCPAN]
 
-[@Git]
