--- a/dist.ini
+++ b/dist.ini
@@ -37,6 +37,7 @@ File::ShareDir = 1.02
 FindBin        = 1.0
 Carp           = 1.0
 Path::Class    = 0.19
+Getopt::Long   = 2.35
 
 ; -- dynamic meta-information
 [ManifestSkip]
