--- a/dist.ini
+++ b/dist.ini
@@ -29,7 +29,7 @@ repository = http://github.com/ruoso/Zumbis
 [PruneCruft]
 
 ; -- get prereqs
-[Prereq]
+[Prereqs]
 SDL            = 2.510
 XML::Compile   = 1.16
 Mouse          = 0.64
@@ -38,6 +38,7 @@ FindBin        = 1.0
 Carp           = 1.0
 Path::Class    = 0.19
 Getopt::Long   = 2.35
+Pod::Usage     = 1.32
 
 ; -- dynamic meta-information
 [ManifestSkip]
