adding Locale::Maketext as dep and bumping version

--- a/dist.ini
+++ b/dist.ini
@@ -1,5 +1,5 @@
 name    = Games-Zumbis
-version = 0.04
+version = 0.05
 author  = Breno G. de Oliveira <garu@cpan.org>, Daniel Ruoso <ruoso@cpan.org>
 license = Perl_5
 copyright_holder = Breno G. de Oliveira, Daniel Ruoso
@@ -30,15 +30,16 @@ repository = http://github.com/ruoso/Zumbis
 
 ; -- get prereqs
 [Prereqs]
-SDL            = 2.518
-XML::Compile   = 1.16
-Mouse          = 0.64
-File::ShareDir = 1.02
-FindBin        = 1.0
-Carp           = 1.0
-Path::Class    = 0.19
-Getopt::Long   = 2.35
-Pod::Usage     = 1.32
+SDL              = 2.518
+XML::Compile     = 1.16
+Mouse            = 0.64
+File::ShareDir   = 1.02
+FindBin          = 1.0
+Carp             = 1.0
+Path::Class      = 0.19
+Getopt::Long     = 2.35
+Pod::Usage       = 1.32
+Locale::Maketext = 0
 
 ; -- dynamic meta-information
 [ManifestSkip]
